--- a/templates/analyses/report/_previews.html
+++ b/templates/analyses/report/_previews.html
@@ -11,7 +11,7 @@
             <div class="tab-pane fade in active" id="system-preview">
                 <div class="row-fluid">
                     <ul class="thumbnails">
-                        {% for preview in anal.metadata.preview %}
+                        {% for preview in analysis.report.metadata.preview %}
                             <li>
                                 <div class="thumbnail">
                                     <table>
