--- a/templates/analyses/report/_ela.html
+++ b/templates/analyses/report/_ela.html
@@ -3,5 +3,5 @@
         <a>ELA</a>
     </li>
 </ul>
-<img src="{% url "analyses.views.image" anal.ela.ela_image %}" />
+<img src="{% url "analyses.views.image" analysis.report.ela.ela_image %}" />
 
