--- a/templates/analyses/report/_xmp.html
+++ b/templates/analyses/report/_xmp.html
@@ -18,7 +18,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {% for k, v in anal.metadata.Xmp.iteritems %}
+                            {% for k, v in analysis.report.metadata.Xmp.iteritems %}
                             <tr>
                                 <td><b>{{ k|upper }}</b></td>
                                 <td> {% include 'analyses/report/_visualize_value.html' with value=v  subgroup=k group="Xmp" %} </td>
