--- a/templates/base.html
+++ b/templates/base.html
@@ -92,7 +92,7 @@
         </header>
         <div class="alert hide" id="newVersion">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <span><strong>Warning!</strong> Best check yo self, you're not looking too good.</span>
+            <span><strong>Info!</strong> Ghiro is back with a brand new version. <i class="icon-download-alt"></i></span>
         </div>
         <section class="section">
             <div class="row-fluid">
@@ -101,7 +101,7 @@
             </div>
         </section>
         <div id="footer">
-            <small class="pull-right"><strong>Ghiro 0.1 - &copy;</strong> With poetry, <a href="http://twitter.com/jekil" target="_blank">jekil</a> and <a href="">burlone</a>. <a href="http://getghiro.org" id="newVersionFooter" class="hide"><span class="badge badge-success">New version</span></a></small>
+            <small class="pull-right"><strong>Ghiro 0.1 - &copy;</strong> With poetry, <a href="http://twitter.com/jekil" target="_blank">jekil</a> and <a href="">burlone</a>. <a href="http://getghiro.org" id="newVersionFooter" class="hide"><span class="badge badge-success">New version available</span></a></small>
         </div>
     </body>
 </html>
