--- a/templates/layout/_modalActionCase.html
+++ b/templates/layout/_modalActionCase.html
@@ -41,3 +41,25 @@
         </button>
     </div>
 </div>
+
+<div id="deleteReport" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+            ×
+        </button>
+        <h3>Delete the report</h3>
+    </div>
+    <div class="modal-body">
+        <p>
+            Are you sure continue?
+        </p>
+    </div>
+    <div class="modal-footer">
+        <a class="btn btn-danger" id="id-delete-report">
+            Delete
+        </a>
+        <button class="btn" data-dismiss="modal" aria-hidden="true">
+            Cancel
+        </button>
+    </div>
+</div>
