Managed errors during the login

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -26,4 +26,10 @@
         </div>
     </div>
 </form>
+{% if form.non_field_errors%}
+    <div class="alert alert-danger">
+        {{ form.non_field_errors }}
+    </div>
+{% endif %}
+
 {% endblock %}
