--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -26,9 +26,9 @@
         </div>
     </div>
 </form>
-{% if form.errors %}
+{% if form.non_field_errors %}
     <div class="alert alert-danger">
-        {{ form.non_field_errors|striptags }}
+        <i class="icon-warning-sign"></i> {{ form.non_field_errors|striptags }}
     </div>
 {% endif %}
 
