--- a/templates/analyses/images/search.html
+++ b/templates/analyses/images/search.html
@@ -16,7 +16,7 @@
                 </li>
             </ul>
         </div>
-        {% include "layout/_searchForm.html" %}
+        {% include "layout/_searchForm.html" with in_case_id=False %}
     </div>
 </div>
 {% endblock %}
